--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,10 +1,10 @@
 <div class="row">
   <div class="col-xs-12">
-    <form [formGroup]="recipeForm">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-sx-12">
-          <button type="submit" class="btn btn-success">Save</button>
-          <a class="btn btn-danger">Cancel</a>
+          <button type="submit" class="btn btn-success" [disabled]="!recipeForm.valid">Save</button>
+          <a class="btn btn-danger" (click)="onCancel()">Cancel</a>
         </div>
       </div>
       <div class="row">
@@ -45,7 +45,7 @@
               <div formGroupName="{{i}}">
                 <div class="col-md-5"><input type="text" class="form-control" formControlName="name"></div>
                 <div class="col-md-5"><input type="text" class="form-control" formControlName="amount"></div>
-                <div class="col-md-2"><button class="btn btn-danger">X</button></div>
+                <div class="col-md-2"><button class="btn btn-danger" (click)="onRemoveItem(i)">X</button></div>
               </div>
               <br><br>
             </div>
@@ -57,9 +57,9 @@
           <ul class="list-group">
             <div class="row">
               <div>
-                <div class="col-md-5"><input type="text" class="form-control"></div>
-                <div class="col-md-5"><input type="text" class="form-control"></div>
-                <div class="col-md-2"><button class="btn btn-primary">+</button></div>
+                <div class="col-md-5"><input type="text" class="form-control" #itemName></div>
+                <div class="col-md-5"><input type="text" class="form-control" #itemAmount></div>
+                <div class="col-md-2"><button class="btn btn-primary" (click)="onAddItem(itemName.value, itemAmount.value)">+</button></div>
               </div>
               <br><br>
             </div>
