--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-10">
-    <app-shopping-list-add></app-shopping-list-add>
+    <app-shopping-list-add [item]="selectedItem" ></app-shopping-list-add>
     <hr>
     <ul class="list-group">
       <li class="list-group-item" style="cursor: pointer" *ngFor="let item of items" (click)="onSelectItem(item)">
